Fixed scroll/overflow error on homepage

--- a/src/app/ui/globals.css
+++ b/src/app/ui/globals.css
@@ -46,6 +46,7 @@ html {
   width: 100%;
 
   overflow-x: hidden;
+  overflow-y: hidden;
 
   margin: 0;
 }
